# blaseball

./: .gitignore  README.rst  pyproject.toml
blaseball/: __init__.py
tests/: test_blaseball.py
