[tool.poetry]
name = "blaseball"
version = "0.1.0"
description = ""
authors = ["Sean Gillespie <sean@swgillespie.me>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
backoff = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-mock = "^3.2.0"
responses = "^0.10.15"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
